--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
+    <div class="container">
     <header>
       <nav>
         <a class="main_logo" href="./index.html">Web<span class="main_logo_span">Studio</span></a>
@@ -194,5 +195,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+    </div>
   </body>
 </html>
