--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
-   
+   <div class="container">
       <header class="header">
-        <div class="elementy_header container">
+        <div class="elementy_header">
         <nav>
           <a class="main_logo" href="./index.html"
             >Web<span class="main_logo_span">Studio</span></a
@@ -51,9 +51,9 @@
             </li>
           </ul>
         </address>
-        </div>
+        
       </header>
-   
+   </div>
     <main>
       <div class="container">
         <section class="section_top">
