--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
   <body>
         <header class="header">
         <div class="elementy_header container">
-        <nav>
-          <a class="main_logo" href="./index.html"
-            >Web<span class="main_logo_span">Studio</span></a
+        <nav class="nav_header">
+          <a class="main_logo" href="./index.html">Web<span class="main_logo_span">Studio</span></a
           >
-          <ul>
-            <li class="nav">
-              <a class="nav_link" href="./index.html">Studio</a>
+          <ul class="nav_menu">
+            <li class="nav_menu_li">
+              <a class="nav_menu_link" href="./index.html">Studio</a>
             </li>
-            <li class="nav"><a class="nav_link" href="">Portfolio</a></li>
-            <li class="nav"><a class="nav_link" href="">Contacts</a></li>
+            <li class="nav_menu_li"><a class="nav_link" href="">Portfolio</a></li>
+            <li class="nav_menu_li"><a class="nav_link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
-          <ul>
-            <li>
+          <ul class="nav_menu">
+            <li class="nav_menu_li">
               <a class="address_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="nav_menu_li">
               <a class="address_link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
