--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </header>
   
     <main>
-    
+    <div class="container">
         <section class="section_top">
           <h1 class="section_top_title">
             Effective Solutions for Your Business
@@ -62,7 +62,7 @@
             Order Service
           </button>
         </section>
-    
+      </div>
         <section>
           <h2 hidden>Title 2</h2>
           <ul>
