--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
           </button>
         </section>
       </div>
-        <section>
+          <div class="container">
+      <section>
           <h2 hidden>Title 2</h2>
           <ul>
             <li>
@@ -96,7 +97,8 @@
             </li>
           </ul>
         </section>
-   
+   </div>  
+   <div class="container">
         <section class="section_third">
           <h2 class="section_third_main_title">Our Team</h2>
           <ul>
@@ -142,7 +144,8 @@
             </li>
           </ul>
         </section>
-      
+       </div> 
+       <div class="container">
         <section>
           <h2 class="section_fourth_main_title">Our Portfolio</h2>
           <ul>
@@ -209,9 +212,9 @@
             </li>
           </ul>
         </section>
-      
+       </div> 
     </main>
-   
+   <div class="container">
       <footer class="footer">
         <a class="footer_logo" href="./index.html"
           >Web<span class="footer_logo_span">Studio</span></a
@@ -221,6 +224,6 @@
           digital marketing & growth solutions.
         </p>
       </footer>
-   
+   </div>
   </body>
 </html>
