--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
+    <div class="container">
         <header class="header">
-        <div class="elementy_header container">
+        <div class="elementy_header">
         <nav class="nav_header">
           <a class="main_logo" href="./index.html">Web<span class="main_logo_span">Studio</span></a
           >
@@ -43,15 +44,13 @@
               >
             </li>
             <li class="nav_menu_li">
-              <a class="address_link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="address_link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
-        </div>
+      </div>
       </header>
-  
+  </div>
     <main>
     <div class="container">
         <section class="section_top">
@@ -62,9 +61,7 @@
             Order Service
           </button>
         </section>
-      </div>
-          <div class="container">
-      <section>
+            <section>
           <h2 hidden>Title 2</h2>
           <ul>
             <li>
@@ -97,8 +94,7 @@
             </li>
           </ul>
         </section>
-   </div>  
-   <div class="container">
+
         <section class="section_third">
           <h2 class="section_third_main_title">Our Team</h2>
           <ul>
@@ -144,8 +140,7 @@
             </li>
           </ul>
         </section>
-       </div> 
-       <div class="container">
+       
         <section>
           <h2 class="section_fourth_main_title">Our Portfolio</h2>
           <ul>
@@ -212,8 +207,9 @@
             </li>
           </ul>
         </section>
-       </div> 
+       
     </main>
+    </div> 
    <div class="container">
       <footer class="footer">
         <a class="footer_logo" href="./index.html"
