--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
-    <div class="container">
+   
         <header class="header">
-        <div class="elementy_header">
+        <div class="elementy_header container">
         <nav class="nav_header">
           <a class="main_logo" href="./index.html">Web<span class="main_logo_span">Studio</span></a
           >
@@ -50,7 +50,7 @@
         </address>
       </div>
       </header>
-  </div>
+  
     <main>
     <div class="container">
         <section class="section_top">
@@ -207,9 +207,9 @@
             </li>
           </ul>
         </section>
-       
-    </main>
-    </div> 
+        </div>
+           </main>
+    
    <div class="container">
       <footer class="footer">
         <a class="footer_logo" href="./index.html"
