--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
             Order Service
           </button>
         </section>
-            <section>
+            <section class="section_second">
           <h2 hidden>Title 2</h2>
-          <ul>
-            <li>
+          <ul class="section_second_list">
+            <li class="section_second_li">
               <h3 class="section_second_title">Strategy</h3>
               <p class="section_second_descr">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="section_second_li">
               <h3 class="section_second_title">Punctuality</h3>
               <p class="section_second_descr">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="section_second_li">
               <h3 class="section_second_title">Diligence</h3>
               <p class="section_second_descr">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="section_second_li">
               <h3 class="section_second_title">Technologies</h3>
               <p class="section_second_descr">
                 Design practice focused on digital experiences. We bring forth a
