--- a/index.html
+++ b/index.html
@@ -52,16 +52,19 @@
       </header>
   
     <main>
-    <div class="container">
+   
         <section class="section_top">
+           <div class="container">
           <h1 class="section_top_title">
             Effective Solutions for Your Business
           </h1>
           <button class="section_top_button" type="button">
             Order Service
           </button>
+          </div>
         </section>
             <section class="section_second">
+              <div class="container">
           <h2 hidden>Title 2</h2>
           <ul class="section_second_list">
             <li class="section_second_li">
@@ -93,9 +96,11 @@
               </p>
             </li>
           </ul>
+          </div>
         </section>
 
         <section class="section_third">
+          <div class="container">
           <h2 class="section_third_main_title">Our Team</h2>
           <ul>
             <li class="section_third_list">
@@ -139,9 +144,11 @@
               <p class="section_third_descr">UI Designer</p>
             </li>
           </ul>
+          </div>
         </section>
        
         <section>
+          <div class="container">
           <h2 class="section_fourth_main_title">Our Portfolio</h2>
           <ul>
             <li>
