--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
             <section class="section_second">
               <div class="container">
-          <h2 hidden>Title 2</h2>
+          <h2  class="visually-hidden">Title 2</h2>
           <ul class="section_second_list">
             <li class="section_second_li">
               <h3 class="section_second_title">Strategy</h3>
