--- a/index.html
+++ b/index.html
@@ -155,21 +155,17 @@
           </div>
         </section>
        
-        <section>
+        <section class="section_fourth">
           <div class="container">
           <h2 class="section_fourth_main_title">Our Portfolio</h2>
-          <ul>
-            <li>
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+          <ul class="section_fourth_list">
+            <li class="section_fourth_li">
+              <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+              <div class="name_app">
               <h3 class="section_fourth_title">Banking App</h3>
               <p class="section_fourth_descr">App</p>
             </li>
-            <li>
+            <li class="section_fourth_li">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Cashless Payment"
@@ -179,7 +175,7 @@
               <h3 class="section_fourth_title">Cashless Payment</h3>
               <p class="section_fourth_descr">Marketing</p>
             </li>
-            <li>
+            <li class="section_fourth_li">
               <img
                 src="./images/meditation-app.jpg"
                 alt="Meditation App"
@@ -190,7 +186,7 @@
               <p class="section_fourth_descr">App</p>
             </li>
 
-            <li>
+            <li class="section_fourth_li">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Taxi Service"
@@ -200,7 +196,7 @@
               <h3 class="section_fourth_title">Taxi Service</h3>
               <p class="section_fourth_descr">Marketing</p>
             </li>
-            <li>
+            <li class="section_fourth_li">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Screen Illustrations"
@@ -210,7 +206,7 @@
               <h3 class="section_fourth_title">Screen Illustrations</h3>
               <p class="section_fourth_descr">Design</p>
             </li>
-            <li>
+            <li class="section_fourth_li">
               <img
                 src="./images/online-courses.jpg"
                 alt="Online Courses"
