--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
               <div class="name_app">
               <h3 class="section_fourth_title">Banking App</h3>
               <p class="section_fourth_descr">App</p>
+              </div>
             </li>
             <li class="section_fourth_li">
               <img
@@ -172,8 +173,10 @@
                 width="360"
                 height="300"
               />
+              <div class="name_app">
               <h3 class="section_fourth_title">Cashless Payment</h3>
               <p class="section_fourth_descr">Marketing</p>
+              </div>
             </li>
             <li class="section_fourth_li">
               <img
@@ -182,8 +185,10 @@
                 width="360"
                 height="300"
               />
+             <div class="name_app">
               <h3 class="section_fourth_title">Meditation App</h3>
               <p class="section_fourth_descr">App</p>
+              </div>
             </li>
 
             <li class="section_fourth_li">
@@ -193,8 +198,10 @@
                 width="360"
                 height="300"
               />
+              <div class="name_app">
               <h3 class="section_fourth_title">Taxi Service</h3>
               <p class="section_fourth_descr">Marketing</p>
+              </div>
             </li>
             <li class="section_fourth_li">
               <img
@@ -203,8 +210,10 @@
                 width="360"
                 height="300"
               />
+              <div class="name_app">
               <h3 class="section_fourth_title">Screen Illustrations</h3>
               <p class="section_fourth_descr">Design</p>
+              </div>
             </li>
             <li class="section_fourth_li">
               <img
@@ -213,8 +222,10 @@
                 width="360"
                 height="300"
               />
+              <div class="name_app">
               <h3 class="section_fourth_title">Online Courses</h3>
               <p class="section_fourth_descr">Marketing</p>
+              </div>
             </li>
           </ul>
           </div>
