--- a/index.html
+++ b/index.html
@@ -22,49 +22,54 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
-   
-        <header class="header">
-        <div class="elementy_header container">
+    <header class="header">
+      <div class="elementy_header container">
         <nav class="nav_header">
-          <a class="main_logo" href="./index.html">Web<span class="main_logo_span">Studio</span></a
+          <a class="main_logo" href="./index.html"
+            >Web<span class="main_logo_span">Studio</span></a
           >
           <ul class="nav_menu">
             <li class="nav_menu_li">
               <a class="nav_menu_link" href="./index.html">Studio</a>
             </li>
-            <li class="nav_menu_li"><a class="nav_link" href="">Portfolio</a></li>
-            <li class="nav_menu_li"><a class="nav_link" href="">Contacts</a></li>
+            <li class="nav_menu_li">
+              <a class="nav_link" href="">Portfolio</a>
+            </li>
+            <li class="nav_menu_li">
+              <a class="nav_link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="nav_menu">
-            <li class="nav_menu_li">
+          <ul class="address-list">
+            <li class="address-item">
               <a class="address_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="nav_menu_li">
-              <a class="address_link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="address-item">
+              <a class="address_link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
       </div>
-      </header>
-  
+    </header>
+
     <main>
-   
-        <section class="section_top">
-           <div class="container">
+      <section class="section_top">
+        <div class="container">
           <h1 class="section_top_title">
             Effective Solutions for Your Business
           </h1>
           <button class="section_top_button" type="button">
             Order Service
           </button>
-          </div>
-        </section>
-            <section class="section_second">
-              <div class="container">
+        </div>
+      </section>
+      <section class="section_second">
+        <div class="container">
           <h2 class="visually-hidden">Title 2</h2>
           <ul class="section_second_list">
             <li class="section_second_li">
@@ -96,11 +101,11 @@
               </p>
             </li>
           </ul>
-          </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="section_third">
-          <div class="container">
+      <section class="section_third">
+        <div class="container">
           <h2 class="section_third_main_title">Our Team</h2>
           <ul class="section_third_list">
             <li class="section_third_li">
@@ -111,8 +116,8 @@
                 height="260"
               />
               <div class="staff">
-              <h3 class="section_third_title">Mark Guerrero</h3>
-              <p class="section_third_descr">Product Designer</p>
+                <h3 class="section_third_title">Mark Guerrero</h3>
+                <p class="section_third_descr">Product Designer</p>
               </div>
             </li>
             <li class="section_third_li">
@@ -123,8 +128,8 @@
                 height="260"
               />
               <div class="staff">
-              <h3 class="section_third_title">Tom Ford</h3>
-              <p class="section_third_descr">Frontend Developer</p>
+                <h3 class="section_third_title">Tom Ford</h3>
+                <p class="section_third_descr">Frontend Developer</p>
               </div>
             </li>
             <li class="section_third_li">
@@ -135,8 +140,8 @@
                 height="260"
               />
               <div class="staff">
-              <h3 class="section_third_title">Camila Garcia</h3>
-              <p class="section_third_descr">Marketing</p>
+                <h3 class="section_third_title">Camila Garcia</h3>
+                <p class="section_third_descr">Marketing</p>
               </div>
             </li>
             <li class="section_third_li">
@@ -147,23 +152,28 @@
                 height="260"
               />
               <div class="staff">
-              <h3 class="section_third_title">Daniel Wilson</h3>
-              <p class="section_third_descr">UI Designer</p>
+                <h3 class="section_third_title">Daniel Wilson</h3>
+                <p class="section_third_descr">UI Designer</p>
               </div>
             </li>
           </ul>
-          </div>
-        </section>
-       
-        <section class="section_fourth">
-          <div class="container">
+        </div>
+      </section>
+
+      <section class="section_fourth">
+        <div class="container">
           <h2 class="section_fourth_main_title">Our Portfolio</h2>
           <ul class="section_fourth_list">
             <li class="section_fourth_li">
-              <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
               <div class="name_app">
-              <h3 class="section_fourth_title">Banking App</h3>
-              <p class="section_fourth_descr">App</p>
+                <h3 class="section_fourth_title">Banking App</h3>
+                <p class="section_fourth_descr">App</p>
               </div>
             </li>
             <li class="section_fourth_li">
@@ -174,8 +184,8 @@
                 height="300"
               />
               <div class="name_app">
-              <h3 class="section_fourth_title">Cashless Payment</h3>
-              <p class="section_fourth_descr">Marketing</p>
+                <h3 class="section_fourth_title">Cashless Payment</h3>
+                <p class="section_fourth_descr">Marketing</p>
               </div>
             </li>
             <li class="section_fourth_li">
@@ -185,9 +195,9 @@
                 width="360"
                 height="300"
               />
-             <div class="name_app">
-              <h3 class="section_fourth_title">Meditation App</h3>
-              <p class="section_fourth_descr">App</p>
+              <div class="name_app">
+                <h3 class="section_fourth_title">Meditation App</h3>
+                <p class="section_fourth_descr">App</p>
               </div>
             </li>
 
@@ -199,8 +209,8 @@
                 height="300"
               />
               <div class="name_app">
-              <h3 class="section_fourth_title">Taxi Service</h3>
-              <p class="section_fourth_descr">Marketing</p>
+                <h3 class="section_fourth_title">Taxi Service</h3>
+                <p class="section_fourth_descr">Marketing</p>
               </div>
             </li>
             <li class="section_fourth_li">
@@ -211,8 +221,8 @@
                 height="300"
               />
               <div class="name_app">
-              <h3 class="section_fourth_title">Screen Illustrations</h3>
-              <p class="section_fourth_descr">Design</p>
+                <h3 class="section_fourth_title">Screen Illustrations</h3>
+                <p class="section_fourth_descr">Design</p>
               </div>
             </li>
             <li class="section_fourth_li">
@@ -223,16 +233,16 @@
                 height="300"
               />
               <div class="name_app">
-              <h3 class="section_fourth_title">Online Courses</h3>
-              <p class="section_fourth_descr">Marketing</p>
+                <h3 class="section_fourth_title">Online Courses</h3>
+                <p class="section_fourth_descr">Marketing</p>
               </div>
             </li>
           </ul>
-          </div>
-        </section>
-        </main>
-      
-      <footer class="footer">
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
       <div class="container">
         <a class="footer_logo" href="./index.html"
           >Web<span class="footer_logo_span">Studio</span></a
@@ -241,8 +251,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-        </div>
-      </footer>
-   
+      </div>
+    </footer>
   </body>
 </html>
