--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a class="nav_menu_link" href="./index.html">Studio</a>
             </li>
             <li class="nav_menu_li">
-              <a class="nav_link" href="">Portfolio</a>
+              <a class="nav_menu_link" href="">Portfolio</a>
             </li>
             <li class="nav_menu_li">
-              <a class="nav_link" href="">Contacts</a>
+              <a class="nav_menu_link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
